# coxswain

./: .gitignore  Dockerfile  LICENCE  README.md  app.py  main.py  pyproject.toml  requirements.txt  route.md  setup.cfg  setup.py  tox.ini
User/: Dockerfile  app.py
blueprints/: __init__.py  auth.py  details.py
coxswain/: __init__.py  constants.py  kube.py  logger.py  models.py  scaler.py  test.yaml  utils.py
coxswain/autoscaler/: __init__.py  scaler.py
coxswain/blueprints/: __init__.py  auth.py  autoscale.py  deployment.py
coxswain/cert/: __init__.py
coxswain/kube/: __init__.py  kube.py
coxswain/logger/: logger.py
coxswain/persistance/: SQL.py  __init__.py  models.py  nosql.py
coxswain/persistance/entities/: User.py
coxswain/persistance/models/: user.py
coxswain/security/: __init__.py  generateKey.py  readKey.py
coxswain/utils/: utils.py
deploy/: HELP.md  docker-compose.yml
deploy/redis-server/: Dockerfile  build.sh  startup.sh
docs/: auth.md
src/coxswain/: __init__.py
src/coxswain/autoscaler/: scaler.py
src/coxswain/blueprints/: auth.py
src/coxswain/persistance/: NoSQL.py  SQL.py  __init__.py
src/coxswain/persistance/entities/: User.py
src/coxswain/security/: generateKey.py  readKey.py
src/coxswain/utils/: config_file.json  utils.py
static/: Signup.css  dashboard.css  login.css  replicas.css  signin.css  update.css
static/css/: app.css
templates/: create.html  dashboard.html  layout.html  login.html  scale.html  signin.html  signup.html  update.html
templates/pages/: signin.html
